# ShweiCompleX

./: .gitignore  CMakeLists.txt  Complex.cpp  Complex.hpp  README.md  complexh_polynomials_solutions.txt  polynomials.txt  polynomials_complexh_out.txt  polynomials_my_out.txt  shweicomplex_polynomials_solutions.txt
data/: matrix.txt  polynomials.txt
include/CirculantMatrix/: GenerateCirculantMatrix.hpp  STL_CirculantMatrix.hpp
include/Polynomials/: STL_PolynomialEquation.hpp  STL_PolynomialSolver.hpp
results/: complexh_matrix_solutions.txt  complexh_polynomials_solutions.txt  shweicomplex_matrix_solutions.txt  shweicomplex_polynomials_solutions.txt  stdcomplex_matrix_solutions.txt  stdcomplex_polynomials_solutions.txt
src/: C_CirculantMatrix.c  C_PolynomialEquation.c  C_PolynomialEquation.h  C_PolynomialSolver.cpp  C_PolynomialSolver.hpp  CirculantMatrix.cpp  CirculantMatrix.hpp  Complex.cpp  Complex.hpp  GenerateCirculantMatrix.cpp  GenerateCirculantMatrix.hpp  PolynomialEquation.cpp  PolynomialEquation.hpp  PolynomialException.hpp  PolynomialGenerator.cpp  PolynomialGenerator.hpp  PolynomialSolver.cpp  PolynomialSolver.hpp  main.cpp  С_CirculantMatrixSolver.hpp
src/C/: C_CirculantMatrix.h  C_CirculantMatrixSolver.cpp  C_CirculantMatrixSolver.hpp  C_PolynomialEquation.c  C_PolynomialEquation.h  C_PolynomialSolver.cpp  C_PolynomialSolver.hpp
src/C++ Proper/: CirculantMatrix.cpp  CirculantMatrix.hpp  PolynomialEquation.cpp  PolynomialEquation.hpp  PolynomialSolver.cpp
src/C++ STL/: STL_CirculantMatrix.cpp  STL_PolynomialEquation.cpp  STL_PolynomialSolver.cpp
src/CirculantMatrix/: C_CirculantMatrix.c  CirculantMatrix.cpp  STL_CirculantMatrix.cpp
src/Polynomials/: C_PolynomialEquation.c  C_PolynomialSolver.cpp  PolynomialEquation.cpp  PolynomialSolver.cpp  STL_PolynomialEquation.cpp  STL_PolynomialSolver.cpp
tools/: GenerateCirculantMatrix.cpp  GenerateCirculantMatrix.hpp  PolynomialGenerator.cpp
